exercises/05-networkpolicy/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: exercise-05
  labels: 
    role: frontend
spec:
  containers:
    - name: frontend
      image: nginx:1.27
---
apiVersion: v1
kind: Pod
metadata: 
  name: backend
  namespace: exercise-05
  labels: 
    role: backend
spec:
  containers:
    - name: backend
      image: nginx:1.27
---
apiVersion: v1
kind: Pod
metadata: 
  name: attacker
  namespace: exercise-05
  labels: 
    role: attacker
spec:
  containers:
    - name: attacker
      image: nginx:1.27
